SERVER-28005 Increase network timeout on oplog queries to be larger than the maxTimeMs

(cherry picked from commit f6006942e76377c9434a61e76a7803eb83430591)