src/mongo/db/repl/oplog_fetcher.h
@@ -252,7 +252,6 @@ private:
     const HostAndPort _source;
     const NamespaceString _nss;
     const BSONObj _metadataObject;
-    const Milliseconds _remoteCommandTimeout;
 
     // Maximum number of times to consecutively restart the fetcher on non-cancellation errors.
     const std::size_t _maxFetcherRestarts;
